RAJ Bloated Idea GFX + Political decisions pp cost (loc broken) UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8727,6 +8727,12 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_propaganda_campaign:0 "Propaganda Campaign"
  RAJ_supress_nationalist_newspaper:0 "Supress Nationalist Newspaper"
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
+ decision_cost_PP_25: "£pol_power  §Y25§!"
+ decision_cost_PP_25_blocked: "£pol_power  §Y25§!"
+ decision_cost_PP_25_tooltip: "It costs £pol_power  §Y25§! to take the decision"
+ decision_cost_PP_75: "£pol_power  §Y75§!"
+ decision_cost_PP_75_blocked: "£pol_power  §Y75§!"
+ decision_cost_PP_75_tooltip: "It costs £pol_power  §Y75§! to take the decision"
  RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
  RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
  
