--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -11971,6 +11971,9 @@ AUH_handle_federalism:0 "If the reform pass, it will §Ycore all of the constitu
  rusrevolt.22.t:0 "Allied Landing at Archangelsk"
  rusrevolt.22.d:0 "Additional allied troops landed at Arkhangelsk. The White garrison couped the Bolshevik local authority and welcomed the troops in hurry."
  rusrevolt.22.a:0 "To Petrograd!"
+ww1_USA_clark.3.t:0 "The Lancaster Concession"
+ww1_USA_clark.3.d:0 "President Champ Clark has made his intentions for a conservatives presidency quite clear. Thus, many have been taken by suprise with news breaking of Clark personally interviening in the Eastern Pennsylvania strike to broker a deal between strikers and employers involving heavy concessions to striking railway workers. Progressives, who have hated Clark in the past, have been pleasently suprised. Many political experts across the country are curious on this seemingly 180 on policy, with some arguing its just to garner progressive Democrats support for him, while others claim its nothing notable, as Clarks agenda has never been especially radical to begin with. Either way, Pennsylvania railway workers are back to work, and everyone in the situation has left not totally unhappy."
+ww1_USA_clark.3.a:0 "Seems like a victory for our administration "
 ww1_USA.164.t:0 "American Protective League to U.S. Food Administration report: The Java Restaurant"
 ww1_USA.164.d:0 "U.S Food Administration,\nMarket Street, nr. Sansome,\nSan Francisco, Cal.\n\nIt is our duty to report to this office that an Austrian reastraunt called 'The Java' at 11 Mason Street, has refused to follow the instructions of the Food Administration in removing the sugar bowls from the tables, and as late as six o'clock in the evening, the sugar bowls were still on the table.\nYours very truely,\nAmerican Protection League"
 ww1_USA.164.a:0 "Their work in instances like this surely are helpful"
