--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -3349,6 +3349,7 @@ ww1_USA.143.a:0 "The people will understand"
  GRE_kondylis_dictatorship:0 "The Kondylis Dictatorship"
  GRE_invite_venizelos:0 "Invite Venizélos"
  GRE_leave_the_coalition:0 "Leave the Coalition"
+USA_financial_hub_of_the_world:0 "The Future Financial Hub of the World"
  GRE_leave_the_coalition_desc:0 "Our party has gained enough traction and we can confidently leave the coalition with the Venizelists, something that will certainly shake the roots of the political scene and bring our ascension to power."
  GRE_demand_snap_elections:0 "Demand Snap Elections"
  GRE_demand_snap_elections_desc:0 "If we are to gain power we must do it by legal means, as an armed revolution against the capitalists will certainly not work. Through our demand of snap elections we can guarantee the peaceful change of the socio-economic and political system to one of socialism, as promoted by the great socialist Alexandros Papanstasiou in the early 1910s."
@@ -3359,6 +3360,10 @@ ww1_USA.143.a:0 "The people will understand"
  GRE_publicize_means_of_production:0 "Publicize the Means of Production"
  GRE_publicize_means_of_production_desc:0 "Publicizing the means of production is one of the keystones of Marxist and socialist thought. The workers of Hellas along with the state shall get to own the means of production, by force if necessary!"
  GRE_publicize_means_of_production_tt:0 "Modify §Y[GetGreekAgrarianSocietyName]§! by:\n$MODIFIER_PRODUCTION_SPEED_BUILDINGS_FACTOR$: §G+3%§! \n$MODIFIER_INDUSTRIAL_CAPACITY_FACTOR$: §G+3%§!"
+USA_law_and_order:0 "Back to Work!"
+ww1_USA_clark.2.t:0 "Harsh Crackdown in Pennsylvania"
+ww1_USA_clark.2.d:0 "Strikers in eastern Pennsylvania have been out of work for the last few weeks demanding better pay and working conditions. While the strikers were hoping to hold out for a favorable deal, the accension of Clark to presidency and his refusal to intervene in the strikers favor has demoralized them massively. With more and more strikers being arrested for... somewhat questionable pretenses, strikers have opted to accept railway companies offers.\n\nWhile the agreed upon reforms are mostly lip service, its been met with ok reception amongst the workers there. "
+ww1_USA_clark.2.a:0 "Good for them"
  GRE_separation_of_church_and_state:0 "Separation of Church and State"
  GRE_separation_of_church_and_state_desc:0 "Separating the church from the state has been a popular idea in Europe since the French revolution of 1789, although due to the power of the Church in Hellas this never even occurred even as a thought. We shall finally stop the church from meddling with Greek politics!"
  GRE_give_land_to_farmers:0 "Give Land to the Farmers"
@@ -4952,7 +4957,9 @@ USA_register_lobbyists:0 "Register Lobbyists"
  AUH_F48P_victory:0 "F48P Victory"
 USA_enforce_party_whip:0 "Intensify Use of Party Whip"
 USA_enforce_whip:0 "Enforce the Whip"
+USA_olive_branch_to_progressives:0 "Extend an Olive Branch to Progressives"
 modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
+modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
  AUH_promote_independence:0 "Promote Statehood"
  AUH_radicalize_the_front:0 "Radicalize the Front"
  AUH_crack_the_reserves:0 "Crack the Reserves"
