--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10686,14 +10686,21 @@ nationalist_leave_coalition:0 "The §LNationalists§! leave our §YCoalition§!,
  SAU_increase_slavery: "State Protected Slavery"
  SAU_increase_slavery_desc: "Despite Islam's clear stance against slavery, there are those who see it as a profitable option due to the availability of cheap labor for tasks like construction and farming, where workers are not paid. However, while it may appear that this practice contradicts ethical principles that islamic societies uphold it is economically advantageous."
  SAU_gather_support: "Gather Tribal Support"
- SAU_gather_support_desc: "In order to fight the northern tribes we can enlist the support of the rest of them."
+ SAU_gather_support_desc: "To combat the northern tribes, we can enlist the support of the other tribes located in Nejd, such as the Mutair, Utaybah, and Dawasir, among others. These tribes are devout Muslims and are largely loyal to the Saudi dynasty. By leveraging their loyalty and religious devotion, we can create a united front to address the challenges posed by the northern tribes, ensuring a more effective and cohesive strategy to maintain stability and security in the region."
  SAU_crackdown_on_christians: "Crackdown on Christians"
+ SAU_crackdown_on_christians_desc: "Despite being People of the Book and warranting protection, Christians are still seen as polytheists, which is intolerable to Abdulaziz. Therefore, we should offer them the option to convert or leave. This approach aligns with Abdulaziz's unwavering stance on monotheism while also presenting a clear choice to the Christian population. It aims to maintain religious purity in the Saudi domains and ensure that Abdulaziz's principles are upheld. "
  SAU_support_katateeb: "Support Katateeb"
+ SAU_support_katateeb_desc: "Katateeb have been integral to Islamic societies for centuries, teaching many to read and write. Why replace them with unfamiliar methods? Instead, we should support the katateeb by providing more books and mandating that everyone enroll their children in them."
  SAU_south_trade: "Oman-Yemen Trade"
+ SAU_south_trade_desc: "Despite the Yemenis and Omanis being considered apostates, their integral trade has benefited us for centuries. Religious differences should not hinder a valuable business opportunity. Maintaining and fostering trade relations with them ensures economic stability and prosperity."
  SAU_reform_zakat: "Reform Zakat"
+ SAU_reform_zakat_desc: "Zakat and Jizyah are not obsolete in this modern era; with a few reforms in their collection and allocation, they can be more effective than ever. These traditional forms of taxation offer a more compassionate approach compared to modern tax systems, which often lack flexibility and mercy. By modernizing the administration of Zakat and Jizyah, we can ensure that they meet contemporary economic needs while retaining their ethical foundations."
  SAU_establish_mabahith: "Establish the Mabahith"
+ SAU_establish_mabahith_desc: "Every ruler and nation requires their own 'men in black' to safeguard state interests and conduct espionage on both enemies and allies. Intelligence agencies, such as the Mabahith (or intelligence agencies in English), are crucial for achieving this. These agencies function similarly to the Tsar's Okhrana, which played a pivotal role in maintaining the security and stability of the Russian throne. "
  SAU_Dynasty_Politics: "Dynasty Politics"
+ SAU_Dynasty_Politics_desc: "Following the Araif revolt, many members of the Saudi dynasty have developed an interest in the state's politics. Within the dynasty, there is a divide: some members wish to maintain traditional ways, while others advocate for reform and modernization. This internal debate reflects broader questions about the future direction of the nation, balancing respect for cultural heritage with the need for progress and development. Navigating these dynamics will be crucial for the state's leadership as they strive to unify the nation and address the challenges of the modern world."
  SAU_Reform: "Reform the State"
+ SAU_Reform_desc: "The Saudi state has historically been perceived as backward, fundamentalist, and somewhat terroristic, often despised and opposed by its neighbors, both small and large. Domestically, the situation is also problematic, as the state relies on outdated knowledge and practices from the 18th century. This must change. Saudi Arabia needs to transform into a beacon of modernity among the tribes and Peninsular Arabs, embracing the advancements and innovations of the 20th century. By adopting modern technologies, progressive policies, and comprehensive educational reforms, Saudi Arabia can position itself as a leading state in the region, fostering development, stability, and prosperity for its people."
  SAU_get_rid_of_ikhwan: "Get rid of Ikhwan"
  SAU_pacify_tribes: "Pacify the Tribes"
  SAU_modern_army: "Modern Army"
@@ -10726,7 +10733,6 @@ nationalist_leave_coalition:0 "The §LNationalists§! leave our §YCoalition§!,
  SAU_repeal_reforms: "Repeal Reforms"
  SAU_impose_tribute_on_pilgrams: "Impose Pilgram Tribute"
  SAU_cut_off_british_ties: "Cut Off British Ties"
-
  SAU_Treaty_of_Darin: "Aftermath of Darin"
  SAU_Treaty_of_Darin_desc: ""
  SAU_Arabian_Confedration: "Seek Arab Unity"
