new characters for syria

--- a/localisation/english/parties_l_english.yml
+++ b/localisation/english/parties_l_english.yml
@@ -1530,6 +1530,8 @@
  ISR_neutrality_party_long:0 "Jewish Territorial Organization"
  ISR_communism_party:0 "Zionist-Socialists"
  ISR_communism_party_long:0 "Zionist Socialist Workers Party"
+ ISR_poale_zion:0 "Poale Zion"
+ ISR_poale_zion_long:0 "Poale Zion"
  #Fascist party is 0% fictional.
  ISR_fascism_party:0 "Betar"
  
