--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4468,6 +4468,28 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman_syria.2.t:0 "Return of Zeki Paşa"
  ottoman_syria.2.d:0 "From the very beginning of his appointment to Syria to organize locals troop recruitment, Zeki Paşa has been objecting for an operation to attack the Suez Canal. As Cemal Paşa's plans to not only plan an offensive against the canal, but to conquer the entiriy of Egypt, Zeki Paşa has resigned from his duties in Syria."
  ottoman_syria.2.a:0 "He shall be appointed elsewhere."
+ ottoman_syria.3.t:0 "[FROM.GetName] Asks for Armament"
+ ottoman_syria.3.d:0 "The regional committee government in [FROM.GetName] is in a dire need for infantry equipment. As they request more equipment from our government, we can either ship some to them or keep them for our own disposal."
+ ottoman_syria.3.a:0 "Weapons for our countrymen at arms."
+ ottoman_syria.3.b:0 "We need it more."
+ ottoman_syria.4.t:0 "[FROM.GetName] Sends Armament"
+ ottoman_syria.4.d:0 "Our regional command is in a dire need of infantry equipment. As we've asked for some equipment shipments from the central government, they've taken our requrest into consideration and sent us some armament."
+ ottoman_syria.4.a:0 "We'll put them to good use."
+ ottoman_syria.4.tt:0 "Modify §YOttoman 4th Army§! by\n£attack_texticon  Division Attack: §G+1.0%§!\n£defence_texticon  Division Defense: §G+1.0%§!\n\n"
+ ottoman_syria.5.t:0 "[FROM.GetName] Refuses to Send Armament"
+ ottoman_syria.5.d:0 "Our regional command is in a dire need of infantry equipment. Though we've asked for some equipment shipments from the central government, they themselves don't have enough equipments to spare."
+ ottoman_syria.5.a:0 "We'll ask them again later."
+ ottoman_syria.6.t:0 "[FROM.GetName] Asks for Artillery"
+ ottoman_syria.6.d:0 "The regional committee government in [FROM.GetName] is in a dire need for artillery equipment. As they request more pieces from our government, we can either ship some to them or keep them for our own disposal."
+ ottoman_syria.6.a:0 "Much needed artillery for them to push"
+ ottoman_syria.6.b:0 "We need it more."
+ ottoman_syria.7.t:0 "[FROM.GetName] Sends Artillery"
+ ottoman_syria.7.d:0 "Our regional command is in a dire need of artillery equipment. As we've asked for some piece shipments from the central government, they've taken our requrest into consideration and sent us some artillery."
+ ottoman_syria.7.a:0 "We'll put them to good use."
+ ottoman_syria.7.tt:0 "Modify §YOttoman 4th Army§! by\n£attack_artillery_texticon  Artillery Attack: §G+1.0%§!\n£defence_artillery_texticon  Artillery Defense: §G+0.5%§!\n\n"
+ ottoman_syria.8.t:0 "[FROM.GetName] Refuses to Send Artillery"
+ ottoman_syria.8.d:0 "Our regional command is in a dire need of artillery equipment. Though we've asked for some piece shipments from the central government, they themselves don't have enough pieces to spare."
+ ottoman_syria.8.a:0 "We'll ask them again later."
 
  ottoman..120.t:0 "Sects Mobilize"
  ottoman..120.d:0 "With the start of the war, conservative sects supporting our regime has started to send volunteer forces in an effort to aid us in our war effort."
