--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -5054,6 +5054,8 @@
  
  TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\nArmy Experience Gain: §G+0.01§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
  TUR_reorganize_the_army_tt:0 "Modify §YOttoman 4th Army§! by\n£organization_texticon  Division Organization: §G+5.0%§!\n£army_morale_texticon  Division Recovery Rate: §G+5.0%§!\n\n"
+ TUR_import_firearms_tt:0 "Through these decisions, we'll be able to improve §Ydivision attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
+ TUR_acquire_heavy_artillery_tt:0 "Through these decisions, we'll be able to improve §Yartillery attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
  TUR_syrian_conscriptions_tt:0 "Modify §YOttoman 4th Army§! by\n£manpower_texticon  Recruitable Population: §Y1.50%§!\n\nUnlocks £decision_icon_small §YArab Conscription§! Decisions.\nThese decisions will let us earn additional §Ymanpower§! from §YSyrian§! states. The effect of these decisions will be determined by §YArab Opposition§! national spirit.\n"
  TUR_appoint_cemal_kucuk_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
  TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
