--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2667,6 +2667,10 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  RUS_naval_vessels_receive_damage:0 "Every naval vessel in §YSevastapol§!, §YOdessa§!, §YYalta§! and §YKerch§! will lose 30% of their §Ystrength§!."
  
  TUR_has_arab_opposition:0 "Has national spirit §YArab Opposition§!"
+ TRS_import_weapons:0 "Import Weapons"
+ TRS_import_weapons_desc:0 "Our regional command is in a state of dire lack of weaponry. For that reason, we should ask more armament from the central government."
+ TRS_import_artillery:0 "Import Artillery"
+ TRS_import_artillery_desc:0 "Our regional command is in a need of artillery. For that reason, we should ask more artillery equipment from the central government."
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
