--- a/localisation/english/replace/replace_traits_l_english.yml
+++ b/localisation/english/replace/replace_traits_l_english.yml
@@ -15,3 +15,4 @@
  heavy_tank_manufacturer:0 "Heavy Armour Designer"
  dive_bomber:0 "Sea Scout"
  dive_bomber_desc:0 "§LAn expert in the use of maritime patrol aircraft.§!"
+ nazi_sympathizer:0 "Prussian Sympathizer"
