some more flavour ideas from kr

--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1261,6 +1261,8 @@
  MON_bogd_khan_MAN_desc:0 "Bogd Khan is the theocratic ruler of Mongolia. As the spiritual leader of the country, he is the head of the Buddhist church. However, with the arrival of the Soviet forces and forces from Mongolian People's Party, the Bogd Khan's position is merely ceremonial, until his death."
  MON_bogd_khan_sternberg:0 "Bogd Khan"
  MON_bogd_khan_sternberg_desc:0 "Bogd Khan is the theocratic ruler of Mongolia. As the spiritual leader of the country, he is the head of the Buddhist church. With arrival of White Russian forces under Roman von Ungern-Sternberg who expelled the Chinese, he has been restored to his throne. His power is mostly nominal, with Ungern-Sternberg pulling the strings and having the real power."
+ MON_nomadic_society:0 "Nomadic Society"
+ MON_nomadic_society_desc:0 "For centuries, the Mongolian peoples have been living in a very nomadic society, moving across the Mongolian steppes every year, never settling down. Much of the Mongolian population still lives like this, with the biggest settled group of Mongolians being in Urga."
  
  #BELGIUM
  idea_pacifism:0 "Ingrained Pacifism"
@@ -1537,6 +1539,8 @@ VIN_administration_indigene_desc:0 "Part of the indigenous elites are now member
 
  VIN_french_military_supplies:0 "[Root.Overlord.getAdjective] Military Supplies"
  VIN_french_military_supplies_desc:0 "[Root.Overlord.getName] delivers weapons and equipment to us according to our requests, granting us a small part of their European production."
+ VIN_Guerilla_Tradition:0 "Guerrilla Tradition"
+ VIN_Guerilla_Tradition_descC:0 "It is wrong to assume that Indochinese are all born guerrillas, but the country is eminently suitable for such warfare, and the people have a long tradition of waging guerrilla warfare from ancient legends to the recent resistance against colonists."
 
  #GERMANY
  GER_hungarian_crisis:0 "The Hungarian Crisis"
@@ -3126,3 +3130,10 @@ FRA_colonial_conscription:0 "Colonial Conscription"
  #Andorra
  ADR_co_prince:0 "Coregency"
  ADR_co_prince_desc:0 "Founded in 1278 by a treaty between the Bishop of Urgell and the Count of Foix, the unique diarchy has remained in place since the Middle Ages. Andorra is jointly reign by the French Head of State and the Bishop of Urgell. This remained the case while France's heads of state alternated between King, Emperor and President, except for a brief period when Andorra was annexed to France by Napoleon I."
+
+ #Georgia
+ GEO_minority_problem:0 "Minority Protests"
+ GEO_minority_problem_desc:0 "Georgia isn't just home to Georgians, but also has Ossetians, Abkhazians, and various other minority groups that feud with the central government."
+
+ BLR_weak_national_identity:0 "Weak National Identity"
+ BLR_weak_national_identity_desc:0 "While many nations in Eastern Europe have experienced a national awakening in the second half of the 19th century, the idea of a Belarusian nation only started to appear in this century. Now very few Belarusians can even comprehend the idea of nationalism, let alone embrace it, and many even consider Belarusians to be nothing but Polonised Russians or poor, uncultured peasants unworthy of the title of "nation""
