--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4960,6 +4960,13 @@ USA_enforce_whip:0 "Enforce the Whip"
 USA_olive_branch_to_progressives:0 "Extend an Olive Branch to Progressives"
 modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
+ww1_USA.52.t:0 "Chaos on our Southern Border"
+ww1_USA.52.d:0 "Mexico, one of the most unstable countries in the Americas, has finally exploded into civil war. With the breakout of the conflict, violence has spread to our border. Mexican raiders looking for supplies have been crossing into our territory, with no fear of murdering those who try to stop them."
+ww1_USA.52.a:0 "We need to do something about this!"
+ww1_USA.109.t:0 "Inauguration of President Wilson"
+ww1_USA.109.d:0 "President-elect Woodrow Wilson has finally assumed office as President of the United States today. Surrounded by several of his supporters, Wilson give his inauguration address speaking about the importance of passing the 'new freedom' agenda, as well as thanking his voters for their support."
+ww1_USA.109.a:0 "Enough talk, let's get action!"
+ww1_USA.127.a:0 "Jesus!"
  AUH_promote_independence:0 "Promote Statehood"
  AUH_radicalize_the_front:0 "Radicalize the Front"
  AUH_crack_the_reserves:0 "Crack the Reserves"
