RAJ Ingress Into India Ordinance AND Defence of India Act Betterment UPDATE

--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -8702,6 +8702,7 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  RAJ_repel_factory_act:0 "Repeal the Indian Factories Act"
  RAJ_repel_factory_act_desc:0 "While the Indian Factories Act was needed to improve labour conditions and thus gain public support, it now stands against our production quotas."
  RAJ_you_can_repel.tt:0 "\nTaking the focus §YMobilize the Raj§! will prevent §Rdiscontent§! from this decision\n"
+ RAJ_expand_raj_usa_cooperation:0 "Expand USA-Raj Cooperation"
  RAJ_bloated_legal_apparatus_remove:0 "Completing this decision is §Rnecessary§! to remove the ''§YBloated Legal Apparatus§!'' National Spirit.\n"
  RAJ_delineate_executive_legislative_power:0 "Delineate Executive/Legislative Powers"
  RAJ_delineate_executive_legislative_power_desc:0 "It is necessary to delineate the powers and functions of the executive and legislative bodies in India. Reaffirming comprehensibly the significant executive powers of the Viceroy and the primarily advisory nature of the Legislative Councils."
@@ -8712,27 +8713,29 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
 
  RAJ_reformation_through_work:0 "Reformation through Work"
  RAJ_reformation_through_work_desc:0 "The Criminal Tribes Act allows us to detain any individual who's affiliated with one of the many ''Criminal tribes'' and reform them through labour camps. While the reformation doesn't actually help the ''Criminals'' emancipate themselves from their caste, it does provide free labour."
+ RAJ_enforce_arms_regulations:0 "Enforce Arms Regulations"
  RAJ_organise_manoeuvres:0 "Organise Military Manoeuvres"
  RAJ_organise_manoeuvres_desc:0 "Organising military manoeuvres along the North-West Frontier will provide our men with much needed experience and motivation."
- decision_cost_CP_15_PP_15: "£command_power  §Y15§! £pol_power  §Y15§!"
- decision_cost_CP_15_PP_15_blocked: "£command_power  §R15§! £pol_power  §Y15§!"
- decision_cost_CP_15_PP_15_tooltip: "It costs £command_power  §Y15§! and £pol_power  §Y15§! to take the decision"
+ decision_cost_CP_15_PP_15:0 "£command_power  §Y15§! £pol_power  §Y15§!"
+ decision_cost_CP_15_PP_15_blocked:0 "£command_power  §R15§! £pol_power  §Y15§!"
+ decision_cost_CP_15_PP_15_tooltip:0 "It costs £command_power  §Y15§! and £pol_power  §Y15§! to take the decision"
  RAJ_o_moore_creagh_take_field_command:0 "Garret O'Moore Creagh Assumes Field Command"
  RAJ_o_moore_creagh_take_field_command_reward:0 "§YGarret O'Moore Creagh§! ([RAJ.GetFlag]) becomes §YField Marshal§!."
- decision_cost_CP_25_PP_15: "£command_power  §Y25§! £pol_power  §Y15§!"
- decision_cost_CP_25_PP_15_blocked: "£command_power  §R25§! £pol_power  §Y15§!"
- decision_cost_CP_25_PP_15_tooltip: "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
+ decision_cost_CP_25_PP_15:0 "£command_power  §Y25§! £pol_power  §Y15§!"
+ decision_cost_CP_25_PP_15_blocked:0 "£command_power  §R25§! £pol_power  §Y15§!"
+ decision_cost_CP_25_PP_15_tooltip:0 "It costs £command_power  §Y25§! and £pol_power  §Y15§! to take the decision"
  RAJ_consolidate_indian_laws:0 "Consolidate Indian Laws"
  RAJ_promote_western_education:0 "Promote Western Education"
  RAJ_propaganda_campaign:0 "Propaganda Campaign"
  RAJ_supress_nationalist_newspaper:0 "Supress Nationalist Newspaper"
  RAJ_supress_socialists_groups:0 "Supress Socialists Groups"
- decision_cost_PP_25: "£pol_power  §Y25§!"
- decision_cost_PP_25_blocked: "£pol_power  §Y25§!"
- decision_cost_PP_25_tooltip: "It costs £pol_power  §Y25§! to take the decision"
- decision_cost_PP_75: "£pol_power  §Y75§!"
- decision_cost_PP_75_blocked: "£pol_power  §Y75§!"
- decision_cost_PP_75_tooltip: "It costs £pol_power  §Y75§! to take the decision"
+ decision_cost_PP_25:0 "£pol_power  §Y25§!"
+ decision_cost_PP_25_blocked:0 "£pol_power  §Y25§!"
+ decision_cost_PP_25_tooltip:0 "It costs £pol_power  §Y25§! to take the decision"
+ decision_cost_PP_75:0 "£pol_power  §Y75§!"
+ decision_cost_PP_75_blocked:0 "£pol_power  §Y75§!"
+ decision_cost_PP_75_tooltip:0 "It costs £pol_power  §Y75§! to take the decision"
+ RAJ_seize_assets_of_seditious_individuals:0 "Seize Assets of Seditious Individuals"
  RAJ_appease_the_indian_national_congress:0 "Appease the Indian National Congress"
  RAJ_appease_the_all_india_muslim_league:0 "Appease the All-India Muslim League"
  
@@ -8770,9 +8773,9 @@ ottoman_minority_tt_desc_edirne_tt:0 "[ottoman_minority_tt_desc_edirne][TUR_otto
  organise_a_peaceful_protest_in_patna:0 "Organise a Peaceful Protest in Patna"
 
  extrasubcontinental_theaters_category:0 "Extrasubcontinental Theaters"
- decision_cost_CP_25_PP_10: "£command_power  §Y15§! £pol_power  §Y10§!"
- decision_cost_CP_25_PP_10_blocked: "£command_power  §R15§! £pol_power  §Y10§!"
- decision_cost_CP_25_PP_10_tooltip: "It costs £command_power  §Y15§! and £pol_power  §Y10§! to take the decision"
+ decision_cost_CP_25_PP_10:0 "£command_power  §Y15§! £pol_power  §Y10§!"
+ decision_cost_CP_25_PP_10_blocked:0 "£command_power  §R15§! £pol_power  §Y10§!"
+ decision_cost_CP_25_PP_10_tooltip:0 "It costs £command_power  §Y15§! and £pol_power  §Y10§! to take the decision"
  currently_preparing_a_new_theater:0 " Currently Preparing a New Theater"
  recently_prepared_a_new_theater:0 " Recently Prepared a New Theater"
  african_theater:0 "Prepare the African Theatre"
