--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -10679,15 +10679,17 @@ RAJ_exploit_princely_ressources:0 "Exploit Princely Ressources"
 RAJ_exploit_princely_ressources_desc:0 ""
 RAJ_defence_of_india_act:0 "Defence of India Act"
 RAJ_defence_of_india_act_desc:0 ""
+RAJ_defence_of_india_act_reward:0 "§RFailure to complete this focus two years into a major war with Germany will result in a major Indian rebellion.§!\n\n"
 RAJ_ingress_into_india_ordinance:0 "Ingress into India Ordinance"
 RAJ_ingress_into_india_ordinance_desc:0 ""
+RAJ_ingress_into_india_ordinance_reward:0 "Completing this focus will §Ygreatly§! diminish the forces of any potential §RIndian rebellion§!.\n\nCompleting this focus will §Ygreatly§! diminish the cost of the £GFX_decision_icon_small §YSupress Nationalist Newspaper§! and £GFX_decision_icon_small §YSupress Socialist Groups§! decisions.\n\n"
 RAJ_rowlatt_committee:0 "Rowlatt Committee"
 RAJ_rowlatt_committee_desc:0 ""
 RAJ_rowlatt_act:0 "Rowlatt Act"
 RAJ_rowlatt_act_desc:0 ""
 
 RAJ_status_of_the_capital:0 "Status of the Capital"
-RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder over time. The question being: where should our administration go?"
+RAJ_status_of_the_capital_desc:0 "Calcutta has been the capital of the British Raj since its inception in 1858 following the Sepoy Rebellion, and has served us well ever since. However, Calcutta has its fair share of sanitary issues and calls for a change of capital have grown louder overtime. The question being: where should our administration go?"
 RAJ_simla_convention:0 "Simla Convention"
 RAJ_simla_convention_desc:0 "With the recent independence of Tibet from China and London's meddling in its affairs, it is only natural that our administration sends a delegation to meet with the Tibetans and Chinese to discuss Tibet's position on the world stage, especially its geographical frontiers and relations with China."
 RAJ_denounce_south_africa:0 "Denounce South-Africa"
