--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4958,11 +4958,20 @@ USA_register_lobbyists:0 "Register Lobbyists"
 USA_enforce_party_whip:0 "Intensify Use of Party Whip"
 USA_enforce_whip:0 "Enforce the Whip"
 USA_olive_branch_to_progressives:0 "Extend an Olive Branch to Progressives"
+modify_dem_unity10:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unity5:0 "Modify §1Democratic Unity§! by: §G+5§!"
 modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
+modify_dem_unityminus10:0 "Modify §1Democratic Unity§! by: §R-10§!"
+department_pf_labor:0 "Department of Labour"
+USA_economic_liberalization:0 "Economic Liberalization"
+USA_empower_the_dol:0 "Empower the Department of Labour"
+USA_american_autarky:0 "American Autarky"
 ww1_USA.52.t:0 "Chaos on our Southern Border"
 USA_sfae_and_sound:0 "Stragetic Tariffs"
 USA_increased_domestic_goods:0 "Protectionism"
+USA_german_industrial_experts:0 "German Industrial Experts"
+USA_corporist_council:0 "Establish the Board of Industrial Experts"
+corporate_board:0 "Corporate Board"
 ww1_USA.52.d:0 "Mexico, one of the most unstable countries in the Americas, has finally exploded into civil war. With the breakout of the conflict, violence has spread to our border. Mexican raiders looking for supplies have been crossing into our territory, with no fear of murdering those who try to stop them."
 ww1_USA.52.a:0 "We need to do something about this!"
 ww1_USA.109.t:0 "Inauguration of President Wilson"
