--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4964,6 +4964,7 @@ modify_dem_unityminus5:0 "Modify §1Democratic Unity§! by: §R-5§!"
 modify_dem_unityminus10:0 "Modify §1Democratic Unity§! by: §R-10§!"
 department_pf_labor:0 "Department of Labour"
 USA_economic_liberalization:0 "Economic Liberalization"
+USA_postal_banking:0 "Cement the Postal Banking System"
 USA_empower_the_dol:0 "Empower the Department of Labour"
 USA_american_autarky:0 "American Autarky"
 ww1_USA.52.t:0 "Chaos on our Southern Border"
