--- a/localisation/english/state_names_l_english.yml
+++ b/localisation/english/state_names_l_english.yml
@@ -1200,5 +1200,5 @@
  KATOWICE_STATE: "Katowice"
  GORNY_SLASK_STATE: "Górny Śląsk"
  POZNAN_STATE: "Poznań"
- POMERELIA_STATE: "Pomerelia"
- OLSZTYNSKA_STATE: "Olsztyńska"
+ POMERELIA_STATE: "Pomorskie"
+ OLSZTYNSKA_STATE: "Olsztyn"
