--- a/localisation/english/countries_cosmetic_l_english.yml
+++ b/localisation/english/countries_cosmetic_l_english.yml
@@ -1920,3 +1920,6 @@
  PAP_vatican_ADJ:0 "Vatican"
  PAP_vatican_neutrality:0 "Vatican City State"
  PAP_vatican_neutrality_DEF:0 "the Vatican City State"
+
+ SER_AUH_neutrality:0 "Serbia"
+ SER_AUH_fascism:0 "Serbia"
