--- a/localisation/english/ww1_events_l_english.yml
+++ b/localisation/english/ww1_events_l_english.yml
@@ -4462,8 +4462,8 @@ kis_news.143.a:0 "Will the revolution spread to Western Europe?"
  ottoman.126.d:0 "Due to the recent attempt to hinder their influence, Christians started to lose their economical hegemony over the region. This resulted in the weakening of centuries old trade infrastructures and markets, and even caused unemployment."
  ottoman.126.a:0 "So far with national economy."
 
- ottoman_syria.1.t:0 "Cemal Küçük to Syria"
- ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Cemal Küçük Paşa will be appointed to Syria."
+ ottoman_syria.1.t:0 "Küçük Cemal to Syria"
+ ottoman_syria.1.d:0 "As the 4th army is being organized in Syria, governor responsible of the Syrian provinces [TRS.GetLeader] has requested the appointment of Mehmed Cemal Paşa. In order to provide a greater military presence in the region, Küçük Cemal Paşa will be appointed to Syria."
  ottoman_syria.1.a:0 "Safe trips Paşam."
  ottoman_syria.2.t:0 "Return of Zeki Paşa"
  ottoman_syria.2.d:0 "From the very beginning of his appointment to Syria to organize locals troop recruitment, Zeki Paşa has been objecting for an operation to attack the Suez Canal. As Cemal Paşa's plans to not only plan an offensive against the canal, but to conquer the entiriy of Egypt, Zeki Paşa has resigned from his duties in Syria."
