--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1035,9 +1035,9 @@
  TUR_war_tax_desc:0 "Using war as an excuse, heavy taxes were imposed on the population. Yet the unpopularity of these taxes makes us beg the question if it's worth to keep it for long."
  TUR_committee_of_union_and_progress:0 "Committee of Union and Progress"
  TUR_committee_of_union_and_progress_desc:0 "İttihat ve Terakki Fırkası has established itself as a large party with wide reaching members. Though not all of it's members hold posts in the government, the unofficially retain power and influence the empire. The views and actions of certain individuals within the party shape the actions, thus the future of the empire."
- TUR_the_regent_of_sultan:0 "The Regent of Sultan"
- TUR_the_regent_of_sultan_desc:0 "Our leader, [ROOT.GetLeader], may have been appointed by the Central Committee to Syria, but he gains his legitimacy among the population as being the regent of sultan in these lands."
- TUR_the_regent_of_sultan_instant_desc:0 "§RWill be removed if we're not subjected a country with an Ottoman Sultan either as a ruler or a public figure§!"
+ TRS_the_regent_of_sultan:0 "The Regent of Sultan"
+ TRS_the_regent_of_sultan_desc:0 "Our leader, [ROOT.GetLeader], may have been appointed by the Central Committee to Syria, but he gains his legitimacy among the population as being the regent of sultan in these lands."
+ TRS_the_regent_of_sultan_instant_desc:0 "§RWill be removed if we're not subjected a country with an Ottoman Sultan either as a ruler or a public figure§!"
  TUR_committee_member:0 "Committee Member"
  TUR_committee_member_desc:0 "Since we're a committee member, our little enclave of an autonomous administration receives the support of the state. Yet the survival of our administration depends solely on the final decision of [347.GetName]."
  TUR_committee_member_instant_desc:0 "\n§RWill be removed if we're not a subject of the Ottomans§!"
@@ -1051,12 +1051,16 @@
  TUR_ottoman_4th_army:0 "Ottoman 4th Army"
  TUR_ottoman_4th_army_desc:0 "When our commandeer Cemal Paşa first arrives at the Ottoman Provinces in Syria, he came here with the task of commanding the Ottoman Fourth Army. Yet as it stands, the 4th Army will require few reforms in order to withstand our enemies and accomplish the tasks it is to been given."
  TUR_ottoman_4th_army_tt:0 "[TUR_o4a_battalion_limit]"
- TUR_crushed_arab_opposition:0 "Crushed Arab Opposition"
- TUR_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemal Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
- TUR_arab_opposition:0 "Arab Opposition"
- TUR_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
+ TRS_crushed_arab_opposition:0 "Crushed Arab Opposition"
+ TRS_crushed_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though Cemal Paşa's reforms in the region is perceived to be unpopular by the local population, we've managed to effectively crush the opposition to our rule."
+ TRS_arab_opposition:0 "Arab Opposition"
+ TRS_arab_opposition_desc:0 "Ottoman Provinces in Syria includes a large number of Arabs within its borders. Though for most of the history of our empire the Arab population has not given any hardship with ruling these lands, the sustainment of their loyalty is not guaranteed. As Cemal Paşa is also set out to implement several reforms to centralize these vilayets, Arabs start to show their opposition in different scales."
  TUR_sectarian_issues:0 "Sectarian Issues"
  TUR_sectarian_issues_desc:0 "Syria encompasses many non-Muslim faiths within itself. Christians, Jews, Druze and alikes reside within the empire. Yet their effects on our empire, good or bad, are open for discussion."
+ TRS_local_shipyards:0 "Local Shipyards"
+ TRS_local_shipyards_desc:0 "Our local governate depends on small civilian shipyards for its naval production. This results in a decrease in an overall dockyard output."
+ TRS_local_shipyards_instant_desc:0 "§RWill be removed if any of our core states has a Naval Dockyard§!"
+
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
  TUR_ottoman_military_mission:0 "Ottoman Military Mission"
