--- a/localisation/english/ww1_decisions_l_english.yml
+++ b/localisation/english/ww1_decisions_l_english.yml
@@ -2671,6 +2671,21 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TRS_import_weapons_desc:0 "Our regional command is in a state of dire lack of weaponry. For that reason, we should ask more armament from the central government."
  TRS_import_artillery:0 "Import Artillery"
  TRS_import_artillery_desc:0 "Our regional command is in a need of artillery. For that reason, we should ask more artillery equipment from the central government."
+ TRS_arab_conscriptions_in_state_flag:0 " Already conscripting local Arab population in a state"
+ TRS_arab_conscriptions_in_state:0 "Arab Conscription in [From.GetName]"
+ TRS_arab_conscriptions_in_state_desc:0 "4th army's divisions were intended to be recruited by local Arab Syrians. Through going from place to place, we'll capture local men to be recruited in our army."
+ decision_cost_army_experience_10:0 "£army_experience §G10§!"
+ decision_cost_army_experience_10_blocked:0 "£army_experience §R10§!"
+ TRS_modernization_of_the_high_command:0 "Modernization of the High Command"
+ TRS_modernization_of_the_high_command_desc:0 "Comparable to our army in the rest of the empire, our army in syria struggles with army commandment. Through modernizing our army command, we can improve our maneuvers on the battlefield."
+ TRS_modernization_of_the_high_command_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Organization: §G+3.0%§!\n"
+ decision_cost_army_experience_20:0 "£army_experience §G20§!"
+ decision_cost_army_experience_20_blocked:0 "£army_experience §R20§!"
+ TRS_palestine_defense_plan:0 "Palestine Defense Plan"
+ TRS_palestine_defense_plan_desc:0 "The most probable enemy will probably strike us from our Egyptian Sinai border. By executing a defensive order in the greater Palestinian region, we can fend off the region against the enemy."
+ TRS_damascus_defense_plan:0 "Damascus Defense Plan"
+ TRS_damascus_defense_plan_desc:0 "Palestine Defense Plan has ran out of its time and we're still in need of a defensive strategy. To defend Damascus, Beirut and its surroundings, we'll form another defensive plan around Damascus."
+ TRS_damascus_defense_plan_tt:0 "Has selected and ran out of §YPalestine Defense Plan§!"
 
  TUR_decision_cost_minority:0 "[TUR.turkeyminoritycost]"
  TUR_decision_cost_minority_blocked:0 "[TUR.turkeyminoritycostblocked]"
@@ -2778,7 +2793,6 @@ AUH_purchase_romanian_grain:0 "Purchase Romanian Grain"
  TUR_occupy_cyprus_desc:0 "Inhabited by Greeks since ancient times, Cyprus fell out of mainland Greek influence when Islam displaced the Byzantine Empire from Asia Minor. Since then, there has been a large Turkish community settled alongside the indigenous Greek population. The island remained under Ottoman control until the 19th century, when the British took administrative control of the island following the Turkish-Russian War, with sovereignty remaining with the Ottomans.\nNow that the British have no control over the island and Greece has only colonised the island as far back as before Christ, we must declare our sovereignty over Cyprus under the principle of national self-determination."
  TUR_declare_jihad:0 "Declare Jihad"
  TUR_declare_jihad_desc:0 "Our leader is Sultan and Caliph, the proxy for Allah's apostle. By declaring Jihad, we may gain support from Islamic comrades."
- TUR_jihad_declared:0 "Jihad has been declared"
  TUR_declare_jihad_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nDivision Recovery Rate: §G+3.0%§!\nWeekly £war_support_modifiericons_texticon  War Support (Combat Casualties): §G+0.20%§!\n\n"
  TUR_renounce_our_claims:0 "Renounce our Claims"
  TUR_renounce_our_claims_desc:0 "Our empire has lost most of its lands in the recent years. Yet this upcoming war is a great opportunity for us to allign with a great power and claim some of our lost territories."
