--- a/localisation/english/ww1_focus_l_english.yml
+++ b/localisation/english/ww1_focus_l_english.yml
@@ -4465,7 +4465,7 @@
  TUR_turkish_armor_project_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nArmor Division Attack: §G+3.0%§!\nArmor Division Defense: §G+3.0%§!\n\n"
  TUR_army_modernization:0 "Army Modernization"
  TUR_army_modernization_desc:0 "Our army is inexperienced with using the newly acquired armamments. By organizing special large-scaled military trainings, we'll train our soldiers to successfully use these new weapons."
- TUR_army_modernization_tt:0 "Replace §YArmy of a Bygone Era§! with §YArmy of the Modern Era§!\nEffective change:\nArmy Experience Gain: §G+10%§!\n\n"
+ TUR_army_modernization_tt:0 "Replace §YArmy of a Bygone Era§! with §YArmy of the Modern Era§!\nEffective change:\n£army_experience  Army Experience Gain: §G+10%§!\n\n"
  TUR_armoured_vehicle_reward:0 " \nIf we're in faction with [ITA.GetFlag]§Y[ITA.GetNameDef]§!, we will receive the following bonuses:"
  TUR_army_inspectorates:0 "Army Inspectorates"
  TUR_army_inspectorates_desc:0 "Our Current military organization lacks and fails to compete with the European powers. By replacing the current system of army commands with army inspectorrates, we can trainü mobilize and organiza our armed forces more effectively"
@@ -4502,6 +4502,7 @@
  TUR_camel_companies_tt:0 "Modify [TUR_army_of_a_bygone_era_name] by\nReconnaissance: §G+5.0%§!\nHot acclimatization gain factor: §G+10.0%§!\n\nEnables §YCamelry Recon Detachment§!\n§HInfantry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCavalry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!\n§HCamelry\n    Desert§!\n      Attack: §G+5%§!\n      Movement: §G+10%§!"
  TUR_army_of_islam:0 "Army of Islam"
  TUR_army_of_islam_desc:0 "Our empire still stands as the head of all Muslims in the world. As we've just declared a jihad against infidel powers, we can utilize our position and form an army of Muslims by Muslims, for Muslims."
+ TUR_army_of_islam_tt:0 "Has selected §YDeclare Jihad§!"
  #Turkey Navy
  TUR_bahriye_nezareti:0 "Bahriye Nezâreti"
  TUR_bahriye_nezareti_desc:0 "In 1867, the Council of Ministers carried out a number of reforms, including in the environment of the naval forces. It was decided to establish the Ministry of the Navy, Bahriye Nezâreti."
@@ -5052,11 +5053,15 @@
  TUR_end_of_an_era_desc:0 "Our gamble to join the Great War has been proven to be a mistake. Even before the war, our empire was in a trend of collapsing. Though we've joined the war with the hopes of victory and securing the future of the empire, it has proven to be a fatal mistake. It's not a long time untill the sick man turns into a hollow corpse, with a future at the hands of those who defeated it preparing to divide its terrotires yet into more colonies."
  TUR_end_of_an_era_tt:0 "This focus will automatically be completed if we're §Ydefeated§! in the §YGreat War§!"
  
- TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\nArmy Experience Gain: §G+0.01§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
+ TUR_ottoman_fourth_army_tt:0 "Modify §YOttoman 4th Army§! by\n£army_experience  Army Experience Gain: §G+0.02§! daily\n£command_power_max_texticon  Maximum Command Power Increase: §G+30§!\n£command_power_texticon  Daily Command Power Gain Multiplier:: §G+15%§!\n\n"
  TUR_reorganize_the_army_tt:0 "Modify §YOttoman 4th Army§! by\n£organization_texticon  Division Organization: §G+5.0%§!\n£army_morale_texticon  Division Recovery Rate: §G+5.0%§!\n\n"
  TUR_import_firearms_tt:0 "Through these decisions, we'll be able to improve §Ydivision attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
  TUR_acquire_heavy_artillery_tt:0 "Through these decisions, we'll be able to improve §Yartillery attack§! and §Ydefense§! of §YOttoman 4th Army§! national spirit."
  TUR_syrian_conscriptions_tt:0 "Modify §YOttoman 4th Army§! by\n£manpower_texticon  Recruitable Population: §Y1.50%§!\n\nUnlocks £decision_icon_small §YArab Conscription§! Decisions.\nThese decisions will let us earn additional §Ymanpower§! from §YSyrian§! states. The effect of these decisions will be determined by §YArab Opposition§! national spirit.\n"
+ TUR_desert_reconnisance_tt:0 "Modify §YOttoman 4th Army§! by\n£recon_texticon  Reconnaissance: §G+10.0%§!\n£terrain_penalty_texticon  Terrain Penalty Reduction: §G+10.0%§!\n£recon_texticon  Recon Bonus While Entrenched: §G+5.0%§!\n\n"
+ TUR_desert_training_tt:0 "Modify §YOttoman 4th Army§! by\n£attrition_hot_texticon  Heat Attrition: §G-10.00%§!\n£training_speed_texticon  Training time: §G-5.00%§!\n£temperature_hot_texticon  Hot acclimatization gain factor: §G+20.0%§!\n\n"
+ TUR_increased_garrisons_tt:0 "Modify §YOttoman 4th Army§! by\n£political_violence_gain_texticon  Resistance Growth Speed: §G-15%§!\n\nModify occupation law §Y$TUR_gendarmerie$§! by: \n $MODIFIER_RESISTANCE_TARGET$: §G-5%§! \n $MODIFIER_RESISTANCE_DAMAGE_TO_GARRISONS$: §G-10.00%§! \n $MODIFIER_REQUIRED_GARRISON_FACTOR$: §G-5%§! \n $MODIFIER_COMPLIANCE_GAIN_ADD$: §R-0.001%§! \n\n"
+ TUR_improve_army_command_tt:0 "Modify §YOttoman 4th Army§! by\nBatalion Count Limit: §Y+50§!\n£army_experience  Army Experience Gain: §G+5%§!\n\n"
  TUR_appoint_kucuk_cemal_tt:0 "[TUR.GetFlag]§Y[TUR.GetName]§!:\n§YMehmed Cemal Paşa§!([TUR.GetFlag]) Joins §Y[TRS.GetNameDef]§!\n§YMehmed Cemal Paşa§! becomes a Chief of Army with the effect:\n£army_experience  Army Experience Gain: §G+0.20§! daily\n£attack_texticon  Division Attack: §G+5.0%§!\n"
  TUR_defense_of_syria_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Add Defense Skill §G1§!"
  TUR_prepare_for_the_egyptian_expedition_tt:0 "§YZeki Paşa§!([TUR.GetFlag]) Joins §Y[TUR.GetNameDef]§!"
