--- a/localisation/english/ww1_ideas_l_english.yml
+++ b/localisation/english/ww1_ideas_l_english.yml
@@ -1060,6 +1060,8 @@
  TRS_local_shipyards:0 "Local Shipyards"
  TRS_local_shipyards_desc:0 "Our local governate depends on small civilian shipyards for its naval production. This results in a decrease in an overall dockyard output."
  TRS_local_shipyards_instant_desc:0 "§RWill be removed if any of our core states has a Naval Dockyard§!"
+ TRS_syria_defense_plan:0 "Syria Defense Plan"
+ TSR_syrian_defense_plan_desc:0 "As we're focusing on defending our Syrian lands rather than pushing towards Egypt, we'll form our tactics focused on holding our lines."
 
 
  TUR_ottoman_industrial_investment:0 "Ottoman Industrial Investment"
@@ -1601,6 +1603,7 @@ FRA_german_reparations:0 "German Reparations"
 
  plus_50_bataillons_limit:0 "Batalion Count Limit: §Y+50§!"
  plus_100_bataillons_limit:0 "Batalion Count Limit: §Y+100§!"
+ plus_150_bataillons_limit:0 "Batalion Count Limit: §Y+150§!"
  plus_250_bataillons_limit:0 "Batalion Count Limit: §Y+250§!"
  minus_50_percent_bataillons_limit:0 "Batalion Count Limit: §R-50%§!"
 
